--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link href="css/style.css" type="text/css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-1.12.3.js" integrity="sha256-1XMpEtA4eKXNNpXcJ1pmMPs8JV+nwLdEqwiJeCQEkyc=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
         <title></title>
     </head>    
     <body>
@@ -12,10 +13,10 @@
             </div>
             <nav class="inline-block">
                 <ul>
-                    <li class="inline-block">About</li>
-                    <li class="inline-block">Skills</li>
-                    <li class="inline-block">Work</li>
-                    <li class="inline-block">Contact</li>
+                    <li class="inline-block"><a href="index.html">About</a></li>
+                    <li class="inline-block"><a href="uxskills.html">Skills</a></li>
+                    <li class="inline-block"><a href="work.html">Work</a></li>
+                    <li class="inline-block"><a href="">Contact</a></li>
                 </ul>
             </nav>
             
@@ -47,15 +48,18 @@
                     subjects for some time, I’m 
                     happy learning almost 
                     anything as long as I’m helping 
-                    to solve a viable problem.</p>
+                    to solve a viable problem.
                     <br>
+                </p>
             </div>
         </section>
-        <section class="button">
-        <div class="button">
-        <button class="button" type="button">DOWNLOAD RESUME</button>
-        </div>
-    </section>
+        <section class="center">
+            <button class="button" type="button">DOWNLOAD RESUME</button>
+        </section>
+        <br>
+        <br>
+        <br>
+        <br>
         <footer>
             <ul>
                 <a href=""><img src="images/email.png" alt="Email" style="width:40px;height:32px;"></a>
