--- a/work.html
+++ b/work.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link href="css/style3.css" type="text/css" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/index.js"></script>
         <title></title>
     </head>    
     <body>
@@ -11,10 +13,10 @@
             </div>
             <nav class="inline-block">
                 <ul>
-                    <li class="inline-block">About</li>
-                    <li class="inline-block">Skills</li>
-                    <li class="inline-block">Work</li>
-                    <li class="inline-block">Contact</li>
+                    <li class="inline-block"><a href="index.html">About</a></li>
+                    <li class="inline-block"><a href="uxskills.html">Skills</a></li>
+                    <li class="inline-block"><a href="work.html">Work</a></li>
+                    <li class="inline-block"><a href="">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,14 +30,14 @@
                     <div class="right">
                         <h4>Pax Travel Mobile App</h4>
                         <p>Mobile application for the simplistic traveler in you.</p>
-                        <button>View Project</button>
+                        <button class="button" type="button"><a href="">View Project</a></button>
                     </div>
                 </div>
                 <div class="row">  
                     <div class="left">
                         <h4>San Antonio Zoo Redesign</h4>
                         <p>Collaborative Nonprofit Desktop and Mobile Redesign. </p>
-                        <button>View Project</button>
+                        <button class="button" type="button"><a href="">View Project</a></button>
                     </div>  
                     <div class="right"><img src="images/sa zoo.png" alt=""></div>
                 </div>
@@ -44,7 +46,7 @@
                     <div class="right">
                         <h4>TBA</h4>
                         <p>This is a place holder.</p>
-                        <button>View Project</button>
+                        <button class="button" type="button"><a href="">View Project</a></button>
                     </div>
                 </div>
             </div>
